trying to tweak a few things to correct the displaying which is faulty on iPhone 12 PRO MAX

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -14,7 +14,7 @@ html {
 #logo {
   top: 2%;
   left: 2%;
-  height: 80px;
+  height: 60px;
   position: absolute;
   z-index: 1;
   cursor: pointer;
@@ -54,7 +54,7 @@ html {
 .window-title {
   height: 100%;
   width: 50%;
-  padding: 0.7em 0.1rem;
+  padding: 0.4rem 0.1rem;
   margin: 0.1rem;
   font-size: 0.7rem;
   font-family: "Quicksand", sans-serif;
